k8s/overlays/production/service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-app
spec:
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: 3000
      nodePort: 30699
      protocol: TCP
